--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="login">Retry Login</string>
     <string name="logout">Log Out</string>
     <string name="status_logged_out">Logged Out</string>
-    <string name="status_logged_in">Logged In</string>
+    <string name="status_logged_in">Logged in</string>
     <string name="status_user_cancelled">User Cancelled</string>
     <string name="status_error">We found a problem: %1$s</string>
     <string name="not_open_file">Could not open file</string>
