--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Checklists</string>
     <string name="source_google_drive">Google Drive</string>
     <string name="start_drive">Start Google Drive</string>
-    <string name="login">Retry Login</string>
+    <string name="login">Login</string>
     <string name="logout">Log Out</string>
     <string name="status_logged_out">Logged Out</string>
     <string name="status_logged_in">Logged in</string>
