Stable version 1.0.3 Image was not printing in PDF. Now fixed. Extension error

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="status_error">We found a problem: %1$s</string>
     <string name="not_open_file">Could not open file</string>
     <string name="show_all">Show All</string>
+    <string name="click_to_share_template">Click to share template!</string>
 </resources>
